avahi (0.6.18-4) unstable; urgency=low

  [ Sjoerd Simons ]
  * debian/rules:
    + Ensure that ServiceTypeDatabase.py is generated instead of using the one
      from the tarball (Closes: #420184)

  [ Michael Biebl ]
  * Start avahi-daemon and avahi-dnsconfd as regular SysV init scripts.
    (Closes: #396811, #367748, #378114)
    + debian/avahi-daemon.init,
      debian/avahi-dnsconfd.init
      - Added. Based on the upstream init scripts.
      - Add proper LSB headers.
      - Remove reimplementation of LSB logging functions. Depend on lsb-base
        being installed.
      - Use log_daemon_msg instead of log_begin_msg.
      - Remove SVN $Id keyword. (Closes: #354988)
    + debian/avahi-daemon.install,
      debian/avahi-dnsconfd.install
      - Do not install the upstream init script anymore.
    + debian/avahi-daemon.links
      - Remove the symlink /etc/dbus-1/event.d/25avahi-daemon
    + debian/avahi-daemon.postinst
      - Do not restart avahi-daemon manually. dh_installinit takes care of
        that automatically.
    + debian/avahi-daemon.prerm,
      debian/avahi-dnsconfd.{links,postinst,prerm}
      - Removed. Not needed anymore.
    + debian/control
      - Add Depends: lsb-base (>= 3.0-6) to avahi-daemon and avahi-dnsconfd.
    + debian/rules
      - Set DEB_DH_INSTALLINIT_ARGS to start at 24 and stop at 16.
    + debian/patches/03_avahi-daemon-init-unicast-disable.patch
      - Removed, debian/avahi-daemon.init includes this fix directly.
  * debian/rules
    + Remove dh_python call as it is not needed anymore with python-support.
  * debian/control
    + Update the Vcs control field from XS-X-Vcs-Svn to XS-Vcs-Svn.
    + Add XS-Vcs-Browser control field.

 -- Michael Biebl <biebl@debian.org>  Fri, 27 Apr 2007 00:45:50 +0200

avahi (0.6.18-3) unstable; urgency=low

  [ Sjoerd Simons ]
  * debian/avahi-daemon.postinst:
    + Don't let adduser create avahi-daemon's homedir. This prevents it from