@@ -2,14 +2,14 @@
 
 # Don't run the avahi-daemon unicast local check while bringing up
 # the loopback device; it's not necessary until we bring up a real network
-# device, and we do those in the background so they don't hold up the
-# boot process
+# device
 [ "$IFACE" != "lo" ] || exit 0
-
-# If we have an unicast .local domain, we immediately disable avahi to avoid
-# conflicts with the multicast IP4LL .local domain
 
 # Bail out if resolvconf is installed
 [ -x /sbin/resolvconf ] && exit 0
 
-exec /usr/lib/avahi/avahi-daemon-check-dns.sh 
+# If we have an unicast .local domain, we immediately disable avahi to avoid
+# conflicts with the multicast IP4LL .local domain
+if [ -x /usr/lib/avahi/avahi-daemon-check-dns.sh ]
+  exec /usr/lib/avahi/avahi-daemon-check-dns.sh
+fi
